# githubapicpp

./: CMakeLists.txt  README.md
include/: GitHubAPI.cpp  GitHubAPI.h  GithubAPI.cpp  GithubAPI.h  Organization.cpp  Organization.h  Repository.cpp  Repository.h  User.cpp  User.h
src/: CURLUtils.cpp  CURLUtils.h  JSonUtils.cpp  JSonUtils.h
test/: TestGitHubAPI.cpp
